# ibkr-mobile

./: .gitignore  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_NOTES.md  LICENSE  ONBOARDING.md  README.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
android/: README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/tis/ibkr/: IbkrApp.kt  MainActivity.kt
android/app/src/main/java/com/tis/ibkr/data/api/: IbkrApi.kt  Models.kt  QuoteStream.kt
android/app/src/main/java/com/tis/ibkr/ui/: RootScreen.kt
android/app/src/main/java/com/tis/ibkr/viewmodel/: MarketViewModel.kt  OptionChainViewModel.kt  OrderFormViewModel.kt  PositionsViewModel.kt  SearchViewModel.kt  SettingsViewModel.kt  StockDetailViewModel.kt  WatchlistViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: ic_launcher_colors.xml  strings.xml  themes.xml
android/gradle/: libs.versions.toml
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/app/: auth.py  cache.py  config.py  db.py  ibkr.py  longbridge.py  main.py  models.py
backend/app/routes/: account.py  executions.py  health.py  mock.py  options.py  orders.py  quote.py  ws_quotes.py
openspec/changes/multi-user-v2/: design.md  proposal.md  tasks.md
openspec/changes/multi-user-v2/specs/ibkr-mobile/: spec.md
openspec/specs/ibkr-mobile/: spec.md
(+27 files in other folders)
