[project]
name = "ibkr-backend"
version = "0.1.0"
description = "Personal IBKR mobile client backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "ib-async>=1.0.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "longport>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
